<resources>
    <string name="app_name">N-Stick</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="difficulties">DIFFICULTIES</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="setting">SETTING</string>
    <string name="exit">EXIT</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="player_1">PLAYER 1</string>
    <string name="player_2">PLAYER 2</string>
</resources>
